--- a/styles.css
+++ b/styles.css
@@ -364,9 +364,10 @@ h3 {
 
 /* Map container */
 .location-map {
-    flex: 2;
-    min-width: 300px;
-    height: 400px;
+    flex: auto;
+    width: 90%;
+    height: 90%;
+    margin: 10px;
 }
 
 
