--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 /* Prevent horizontal scrolling on the body */
 body {
     overflow-x: hidden;
+    background-color: rgb(255, 36, 0);
 }
 
 
@@ -23,7 +24,7 @@ body {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(transparent, rgba(4, 9, 30, 0.7)), url(https://www.seattleu.edu/media/seattle-university/web-redesign---admissions-amp-aid/Hero-CampusOverall.jpg?wid=1920&hei=1080);
+    background-image: linear-gradient(transparent, rgba(255, 36, 0, 1)), url(https://www.seattleu.edu/media/seattle-university/web-redesign---admissions-amp-aid/Hero-CampusOverall.jpg?wid=1920&hei=1080);
     background-position: center;
     background-size: cover;
     position: relative;
