--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ h3 {
 
 /* Overlay hover effect */
 .layer:hover {
-    background: rgba(255, 255, 0, 0.4);
+    background: rgba(255, 32, 0, 0.4);
 }
 
 
@@ -300,7 +300,7 @@ h3 {
 .layer h3 {
     width: 100%;
     font-weight: 500;
-    color: #ff2000;
+    color: #ffff00;
     font-size: 26px;
     bottom: 0;
     left: 50%;
