--- a/styles.css
+++ b/styles.css
@@ -374,9 +374,10 @@ h3 {
 
 /* Embedded map styling */
 .location-map iframe {
-    width: 100%;
+    width: 80%;
     height: 100%;
     border-radius: 10px;
+    padding-left: 10%;
 }
 
 
