--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,13 @@
 /* Prevent horizontal scrolling on the body */
 body {
     overflow-x: hidden;
-    background-color: rgb(255, 36, 0);
+   /* background-color: rgb(255, 36, 0);*/
+}
+
+#indexPage{
+
+    background-color: rgb(255,36,0);
+    
 }
 
 
