--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ nav .fa {
     width: 80%;
     margin: 50px auto;
     text-align: center;
-    background: #000000;
+    background: rgba(0,0,0,.9);
     padding: 30px 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -546,7 +546,7 @@ h3 {
 
 /* Footer styling */
 .footer {
-    background: #1f1f1f;
+    background-image: linear-gradient(rgb(255,36,0), black);
     color: #fff;
     padding: 4rem 0 1rem 0;
     margin-top: 4rem;
