--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 #indexPage{
 
     overflow-x: hidden;
-    background-color: rgb(255,36,0);
+    background-image:linear-gradient(transparent, rgb(255,36,0),black);
     
 }
 
@@ -31,7 +31,7 @@ body {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(transparent, rgba(255, 36, 0, 1)), url(https://www.seattleu.edu/media/seattle-university/web-redesign---admissions-amp-aid/Hero-CampusOverall.jpg?wid=1920&hei=1080);
+    background-image: linear-gradient(transparent, rgba(255,170,159,1)), url(https://www.seattleu.edu/media/seattle-university/web-redesign---admissions-amp-aid/Hero-CampusOverall.jpg?wid=1920&hei=1080);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -546,7 +546,6 @@ h3 {
 
 /* Footer styling */
 .footer {
-    background-image: linear-gradient(rgb(255,36,0), black);
     color: #fff;
     padding: 4rem 0 1rem 0;
     margin-top: 4rem;
