--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ nav .fa {
 
 #otherPage {
     overflow-x: hidden;
-    background-image: linear-gradient(rgb(255,36,0), black);
+    background-image: linear-gradient(transparent, rgb(255,36,0), black);
 }
 
 
