--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ nav img {
 
 /* Navigation link styling */
 .nav-links ul li a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-size: 1rem;
 }
