--- a/styles.css
+++ b/styles.css
@@ -723,7 +723,7 @@ h3 {
 
     nav .fa {
         display: block;
-        color: #fff;
+        color: #000;
         margin: 10px;
         font-size: 1.375rem;
         cursor: pointer;
